Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/AP_Tour_Plan__c.object-meta.xml
<CustomObject>
    <label>APPL Tour Plan</label>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>AP TourPlan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APPL Tour Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>