Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Party_Type__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AP TourPlans</relationshipLabel>
    <relationshipName>AP_TourPlans</relationshipName>
    <type>Lookup</type>
</CustomField>