Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Account_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Number__c</fullName>
    <formula>Account__r.Contact_Number_Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact Number</label>
    <type>Text</type>
</CustomField>