Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Actual_Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visit_Type__c</fullName>
    <description>This field is updated by Update_Rollup_ApplTarget trigger based on creation of Expense Record.AutoPopulate status Expensive Visit Type.</description>
    <label>Actual_Visit_Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Headquarter</fullName>
            </value>
            <value>
                <fullName>Headquarter-Metro</fullName>
            </value>
            <value>
                <fullName>Headquarter-State Capital</fullName>
            </value>
            <value>
                <fullName>Ex-station</fullName>
            </value>
            <value>
                <fullName>Outstation</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>