Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Add_Visit__c.field-meta.xml
<CustomField>
    <fullName>Add_Visit__c</fullName>
    <formula>HYPERLINK(&apos;/apex/AP_VisitPage?tourId=&apos;+Id, &apos;Site Visit&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add Visit</label>
    <type>Text</type>
</CustomField>