Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Approval_Pending__c.field-meta.xml
<CustomField>
    <fullName>Approval_Pending__c</fullName>
    <formula>(TEXT(Change_Beat_Approval__c) ==&apos;Approved&apos; || TEXT(Change_Beat_Approval__c) ==&apos;Rejected&apos; || TEXT(Change_Beat_Approval__c) ==&apos;&apos; || TEXT(Change_Beat_Approval__c) ==null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Pending</label>
    <type>Checkbox</type>
</CustomField>