Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AP_TourPlans</relationshipName>
    <type>Lookup</type>
</CustomField>