Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Average_hours_in_a_day__c.field-meta.xml
<CustomField>
    <fullName>Average_hours_in_a_day__c</fullName>
    <formula>DATETIMEVALUE(Check_in_Time__c)- DATETIMEVALUE(Check_out_Time__c)</formula>
    <label>Average hours in a day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>