Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Average_time__c.field-meta.xml
<CustomField>
    <fullName>Average_time__c</fullName>
    <formula>(Hour(Check_out_time_test__c) - Hour(Check_in_time_test__c)) + ((Minute(Check_out_time_test__c) - Minute(Check_in_time_test__c))/60)</formula>
    <label>Working hours in a day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>