Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat Master</label>
    <referenceTo>Beat_Master__c</referenceTo>
    <relationshipLabel>APPL Tour Plans</relationshipLabel>
    <relationshipName>APPL_Tour_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>