Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Beat_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Beat_Frequency__c</fullName>
    <label>Beat Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>