Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Beat_Master_Area__c.field-meta.xml
<CustomField>
    <fullName>Beat_Master_Area__c</fullName>
    <label>Beat Master Area</label>
    <length>55</length>
    <type>Text</type>
</CustomField>