Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Beat_master_id__c.field-meta.xml
<CustomField>
    <fullName>Beat_master_id__c</fullName>
    <formula>Beat__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat master id</label>
    <type>Text</type>
</CustomField>