Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Change_Beat_Approval__c.field-meta.xml
<CustomField>
    <fullName>Change_Beat_Approval__c</fullName>
    <description>This field value will be updated automatically when the Beat change happens by the Sales user in Calender page.</description>
    <label>Change Beat Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>