Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Change_To_Beat__c.field-meta.xml
<CustomField>
    <fullName>Change_To_Beat__c</fullName>
    <description>This field is used when user change the planned beat from Visit page</description>
    <label>Change To Beat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>