Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Change_To_Beat_Name__c.field-meta.xml
<CustomField>
    <fullName>Change_To_Beat_Name__c</fullName>
    <label>Change To Beat Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>