Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Check_in_time_test__c.field-meta.xml
<CustomField>
    <fullName>Check_in_time_test__c</fullName>
    <formula>TIMEVALUE(Check_in_Time__c)</formula>
    <label>Check in time test</label>
    <type>Time</type>
</CustomField>