Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Check_out_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_out_Time__c</fullName>
    <label>Check out Time</label>
    <type>DateTime</type>
</CustomField>