Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Check_out_time_test__c.field-meta.xml
<CustomField>
    <fullName>Check_out_time_test__c</fullName>
    <formula>TIMEVALUE(Check_out_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check out time test</label>
    <type>Time</type>
</CustomField>