Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Day_of_date__c.field-meta.xml
<CustomField>
    <fullName>Day_of_date__c</fullName>
    <formula>CASE(MOD(Date__c - DATE(2013, 1, 6),7), 0, &apos;Sunday&apos;, 1, &apos;Monday&apos;, 2, &apos;Tuesday&apos;, 3, &apos;Wednesday&apos;, 4, &apos;Thursday&apos;, 5, &apos;Friday&apos;, &apos;Saturday&apos;)</formula>
    <label>Day of Date</label>
    <type>Text</type>
</CustomField>