Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>APPL Tour Plans (Dealer)</relationshipLabel>
    <relationshipName>APPL_Tour_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>