Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <formula>Target__r.Owner:User.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmployeeNumber</label>
    <type>Text</type>
</CustomField>