Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/First_Visit__c.field-meta.xml
<CustomField>
    <fullName>First_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Visit</label>
    <type>Checkbox</type>
</CustomField>