Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Head_Quarter_Actual__c.field-meta.xml
<CustomField>
    <fullName>Head_Quarter_Actual__c</fullName>
    <label>Head Quarter(Actual)</label>
    <summaryFilterItems>
        <field>AP_Expenses__c.Expens_Visit_Type__c</field>
        <operation>equals</operation>
        <value>Headquarter</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Expenses__c.TourPlan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>