Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Holiday_Market_Closed__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Market_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holiday/Market Closed</label>
    <type>Checkbox</type>
</CustomField>