Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/HQ__c.field-meta.xml
<CustomField>
    <fullName>HQ__c</fullName>
    <formula>Target__r.Owner:User.Head_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HQ</label>
    <type>Text</type>
</CustomField>