Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Planned Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>