Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/No_of_visits_added__c.field-meta.xml
<CustomField>
    <fullName>No_of_visits_added__c</fullName>
    <description>Including visits/other acivities</description>
    <label>No.of outlets added</label>
    <summaryForeignKey>AP_Site_Visit__c.AP_Tour_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>