Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Non_Holiday_Non_Leave_Other_Activities__c.field-meta.xml
<CustomField>
    <fullName>Non_Holiday_Non_Leave_Other_Activities__c</fullName>
    <description>Non-Holiday/Non Leave Other Activities</description>
    <label>Non-Holiday/Non Leave Other Activities</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Other Activities</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Othet_Activities__c</field>
        <operation>equals</operation>
        <value>Meeting, Promotional Activity, Training, Post Visit Order</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.AP_Tour_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>