Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Non_Holiday_Non_Leave_Visit_Activities__c.field-meta.xml
<CustomField>
    <fullName>Non_Holiday_Non_Leave_Visit_Activities__c</fullName>
    <description>Non-Holiday/Non Leave Visit Activities</description>
    <label>Non-Holiday/Non Leave Visit Activities</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Project Visit, Visits, brandingVist</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Geo_Address__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.AP_Tour_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>