Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Number_of_Leave_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leave_Holiday__c</fullName>
    <label>Number of Leave/Holiday</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Other Activities, brandingVist</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Othet_Activities__c</field>
        <operation>equals</operation>
        <value>Holiday/ Market Closed, Leave</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.AP_Tour_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>