Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Number_of_orders_taken__c.field-meta.xml
<CustomField>
    <fullName>Number_of_orders_taken__c</fullName>
    <label>Number of orders taken</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Order_Value__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.AP_Tour_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>