Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Order_to_Visit_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Order_to_Visit_Ratio__c</fullName>
    <formula>Number_of_orders_taken__c / Actual_visited_dealers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order to Visit Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>