Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Order_value_ratio__c.field-meta.xml
<CustomField>
    <fullName>Order_value_ratio__c</fullName>
    <formula>Total_Order_value_taken__c / Actual_visited_dealers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order value ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>