Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Owner_Town__c.field-meta.xml
<CustomField>
    <fullName>Owner_Town__c</fullName>
    <formula>Owner:User.Head_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Town</label>
    <type>Text</type>
</CustomField>