Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Owner_Zone__c.field-meta.xml
<CustomField>
    <fullName>Owner_Zone__c</fullName>
    <formula>TEXT(Owner:User.Depot_Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Zone</label>
    <type>Text</type>
</CustomField>