Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Planned_Beat_visits__c.field-meta.xml
<CustomField>
    <fullName>Planned_Beat_visits__c</fullName>
    <formula>Beat__r.NoOfAccounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Beat visits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>