Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Planned_Value__c.field-meta.xml
<CustomField>
    <fullName>Planned_Value__c</fullName>
    <label>Planned Value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>