Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Promotional_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Type__c</fullName>
    <label>Promotional Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boarers Meet</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Jeep Campaign</fullName>
            </value>
            <value>
                <fullName>Farmers Meet</fullName>
            </value>
            <value>
                <fullName>Tractor Show</fullName>
            </value>
            <value>
                <fullName>Shandy Show</fullName>
            </value>
            <value>
                <fullName>Mechanics Meet</fullName>
            </value>
            <value>
                <fullName>Column Dealer Meet</fullName>
            </value>
            <value>
                <fullName>Column Dealers Factory Visit</fullName>
            </value>
            <value>
                <fullName>Column Dealers Salesman Meet</fullName>
            </value>
            <value>
                <fullName>InShop Mechanic Meet</fullName>
            </value>
            <value>
                <fullName>Mechanics Factory Visit</fullName>
            </value>
            <value>
                <fullName>Onsite Plumber Meet</fullName>
            </value>
            <value>
                <fullName>Plumbing DSM Meet / Training</fullName>
            </value>
            <value>
                <fullName>Engineers Meets</fullName>
            </value>
            <value>
                <fullName>Onsite Plumber Meets</fullName>
            </value>
            <value>
                <fullName>Naaka Meets</fullName>
            </value>
            <value>
                <fullName>Architects Meets</fullName>
            </value>
            <value>
                <fullName>Mega Plumbers Meets</fullName>
            </value>
            <value>
                <fullName>Plumbing Dealers Factory Visits</fullName>
            </value>
            <value>
                <fullName>Architects</fullName>
            </value>
            <value>
                <fullName>Engineers</fullName>
            </value>
            <value>
                <fullName>Consultants Factory Visits</fullName>
            </value>
            <value>
                <fullName>Plumbing factory Visits</fullName>
            </value>
            <value>
                <fullName>Inshop Plumber Meets</fullName>
            </value>
            <value>
                <fullName>Exhibition / Construction Fairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>