Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target</label>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>APPL Tour Plans</relationshipLabel>
    <relationshipName>AP_TourPlans</relationshipName>
    <type>Lookup</type>
</CustomField>