Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Target_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Target_Vertical__c</fullName>
    <formula>TEXT(Target__r.Vertical__c )</formula>
    <label>Target Vertical</label>
    <type>Text</type>
</CustomField>