Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Total_Order_value_taken__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_value_taken__c</fullName>
    <label>Total Order value taken</label>
    <summarizedField>AP_Site_Visit__c.Order_Value__c</summarizedField>
    <summaryForeignKey>AP_Site_Visit__c.AP_Tour_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>