Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Unplanned_visit_count__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_visit_count__c</fullName>
    <label>Unplanned Dealer visit count</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Unplanned_Visit__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.AP_Tour_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>