Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>This field is used in Expense Report.</description>
    <formula>TEXT(Target__r.Vertical__c )</formula>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>