Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Visit_Count__c.field-meta.xml
<CustomField>
    <fullName>Visit_Count__c</fullName>
    <label>Visit Count Non Dealers</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Remarks__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Purpose_of_Visit__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Party_Type__c</field>
        <operation>notEqual</operation>
        <value>Dealer</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.AP_Tour_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>