Partial_14Dec2021/force-app/main/default/objects/AP_Tour_Plan__c/fields/Working_with__c.field-meta.xml
<CustomField>
    <fullName>Working_with__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Working with</label>
    <referenceTo>User</referenceTo>
    <relationshipName>APPL_Tour_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>